--- a/css/lullabytunes-responsive.css
+++ b/css/lullabytunes-responsive.css
@@ -55,6 +55,10 @@
         line-height: 48px;
     }
     
+    .services-block {
+        margin-bottom: 16rem;
+    }
+    
     .client-logo-wrapper img {
         padding: 4rem;
     }
