--- a/css/lullabytunes-responsive.css
+++ b/css/lullabytunes-responsive.css
@@ -17,7 +17,7 @@
     }
     
     .nav {
-        padding: 1rem 0rem;
+        padding: 2rem 0rem;
     }
     
     .section {
@@ -39,7 +39,7 @@
     }
     
     .hero {
-        margin-top: 1rem;
+        padding-top: 1rem;
     }
     .hero .hero-wrapper {
         padding: 6rem 2rem;
