--- a/css/lullabytunes.css
+++ b/css/lullabytunes.css
@@ -29,7 +29,7 @@ body
     -ms-flex: 1 0 auto;
     flex: 1 0 auto;
     
-    background: #F7F7F7;
+    background: #000;
     
     width: 100%;
     overflow-x: hidden;
@@ -72,10 +72,10 @@ ul {
 }
 
 .nav {
-    padding: 1rem 1rem;
+    padding: 1rem 0rem;
     position:absolute;
-    left: 1rem;
-    right: 1rem;
+    left: 0rem;
+    right: 0rem;
     z-index: 10;
 }
 .nav .logo {
@@ -84,6 +84,9 @@ ul {
     text-transform: uppercase;
     font-size: 24px;
     letter-spacing: 2px;
+}
+.nav .logo a {
+    color: #fff;
 }
 .nav .logo img {
     width: 60px;
@@ -142,7 +145,8 @@ ul {
     font-size: 18px;
     font-weight: 200;
     line-height: 1.5;
-    color: #898989;
+    color: #000;
+    opacity: 0.8;
 }
 
 .text-small {
@@ -154,7 +158,7 @@ ul {
 }
 
 .label {
-    font-size: 16px;
+    font-size: 24px;
     font-weight: 700;
     font-family: sofia-pro;
     text-transform: uppercase;
@@ -164,28 +168,50 @@ ul {
     height: 100vh;
     position: relative;
     padding: 0rem 1rem;
+    color: #fff;
+}
+.hero .hero-wrapper {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 1rem;
 }
 .hero-action {
     position: absolute;
     bottom: 4rem;
     left: 1rem;
 }
+.hero-action a {
+    color: #fff;
+}
 .hero-action img {
     width: 18px;
     height: 18px;
     position: relative;
     top: 2px;
-    opacity: 0.4;
+    opacity: 0.9;
 }
-.hero-action:hover img {
-    opacity: 1;
+.hero-action:hover {
+    opacity: 0.5;
 }
 
 .client-logo-wrapper img {
     max-width: 100%;
     padding: 1rem;
 }
+.client-logo-wrapper:nth-child(odd) img {
+    padding-right: 0rem;
+}
+.client-logo-wrapper:nth-child(even) img {
+    padding-left: 0rem;
+}
 
+#about {
+    background: #ea66ff;
+}
+#our-services {
+    background: #9fd;
+}
 .services-block {
     margin-bottom: 8rem;
 }
@@ -208,28 +234,13 @@ footer {
     padding-top: 4rem;
     padding-bottom: 1rem;
 }
-
-#content{
-    border: 1px dotted green;
-    padding: 18px;
-    margin-left: 215px;
-    min-height: 600px;
-    color: darkgrey;
+footer .logo {
+    font-family: sofia-pro;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1.1;
 }
 
-#sidebar{
-    float: left;
-    width: 200px;
-    will-change: min-height;
-}
-
-#sidebar .sidebar__inner{
-    
-    position: relative;
-    transform: translate(0, 0);
-    transform: translate3d(0, 0, 0);
-    will-change: position, transform;
-}
 
 #scroll-section {
     overflow-y: hidden;
@@ -248,21 +259,21 @@ footer {
 .circle {
     border-radius: 30rem;
     position: absolute;
-    background: #eaeaec;
+    background: #A7A7E9;
     z-index: -1;
-    opacity: 0.4;
+    opacity: 0.2;
 }
 
 .circle.circle1 {
-    top: -2rem;
-    left: 10rem;
+    top: -8rem;
+    left: 5rem;
     height: 50rem;
     width: 50rem;
 }
 
 .circle.circle2 {
-    top: 32rem;
-    left: 55rem;
-    height: 40rem;
-    width: 40rem;
+    top: 24rem;
+    left: 50rem;
+    height: 50rem;
+    width: 50rem;
 }
