safari bug fixed

--- a/css/lullabytunes.css
+++ b/css/lullabytunes.css
@@ -235,7 +235,7 @@ ul {
     padding-top: 0.5rem;
     color: #969697;
     text-transform: uppercase;
-    font-family: sofia pro;
+    font-family: sofia-pro;
     font-weight: 700;
     letter-spacing: 0.05rem;
     font-size: 18px!important;
